# xrootd-s3-http

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: linter.yml  test.yml
cmake/: FindAtomic.cmake  Findtinyxml2.cmake
configs/: 60-s3.cfg  export-lib-symbols  xrootd-acchttpcallout-example.cfg
rpm/: xrootd-s3-http.spec  xrootd-s3.spec
src/: AWSCredential.cc  AWSCredential.hh  AWSUtils.cc  AWSUtils.hh  AWSv4-impl.cc  AWSv4-impl.hh  AccHttpCallout.cc  AccHttpCallout.hh  CurlUtil.cc  CurlUtil.hh  CurlWorker.hh  DeadlockAcc.cc  DeadlockAcc.hh  DeadlockDetector.cc  DeadlockDetector.hh  DeadlockOss.cc  DeadlockOss.hh  DummyStallOss.cc  Filter.cc  Filter.hh  GlobusDirectory.cc  GlobusDirectory.hh  GlobusFile.cc  GlobusFile.hh  GlobusFileSystem.cc  GlobusFileSystem.hh  HTTPCommands.cc  HTTPCommands.hh  HTTPDirectory.cc  HTTPDirectory.hh  HTTPFile.cc  HTTPFile.hh  HTTPFileSystem.cc  HTTPFileSystem.hh  Posc.cc  Posc.hh  PrefixN2N.cc  PrefixN2N.hh  S3AccessInfo.cc  S3AccessInfo.hh  (+20 more)
test/: CMakeLists.txt  README.md  acchttpcallout_tests.cc  deadlock-setup.sh  deadlock-teardown.sh  deadlock-test.sh  deadlock_tests.cc  filter_tests.cc  http_tests.cc  lsan-suppressions.txt  n2n-setup.sh  n2n-teardown.sh  n2n-test.sh  n2n_prefix_tests.cc  posc_tests.cc  s3-gowrk-test.sh  s3-list-test.sh  s3-setup.sh  s3-stress-test.sh  s3-test.sh  s3-xrootd-test.cfg  s3_tests.cc  s3_tests_common.hh  s3_unit_tests.cc  xrdhttp-setup.sh  xrdhttp-test.sh
